<resources>
    <string name="app_name">Github</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="search">Type here to search user</string>
    <string name="name">FerdinaSK</string>
    <string name="html">https://github.com/makhalibagas</string>
    <string name="username">Ferdina</string>
    <string name="email">ferdina.2394@students.amikom.ac.id</string>
    <string name="blog">blog.blogspot.com</string>
    <string name="follows">4 Followers. 20 Following</string>
    <string name="repos">34 Repository</string>
    <string name="descRepo">this repo use java and kotlin language, Is all submission in the android fundalmental application learning class in dicoding and in the class i get a certificate</string>
    <string name="search_user">Github</string>
    <string name="aplikasi_github_user">Aplikasi-Github-User</string>
    <string name="java">Java</string>
    <string name="_10">10</string>
    <string name="updatee">Updated 2 days ago</string>
    <string name="unstar">Unstar</string>
    <string name="author">Dibuat oleh FerdinaSK</string>
    <string name="kembali">kembali</string>
    <string name="nama">Ferdina Siti Khotijah</string>
    <string name="nim">20.22.2394</string>


</resources>
