<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.DetailActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgUser"
                android:layout_width="130dp"
                android:layout_height="115dp"
                android:layout_margin="12dp"
                android:layout_marginTop="30dp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/ic_user"/>

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito"
                android:includeFontPadding="false"
                android:text="@string/name"
                android:textColor="@color/colorPrimary"
                android:textSize="24sp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imgUser" />

            <TextView
                android:id="@+id/tvUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="@string/username"
                android:textSize="18sp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvName" />


            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="201dp"
                android:layout_height="21dp"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="5dp"
                android:gravity="center_vertical"
                android:text="@string/email"
                android:textSize="12sp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvUsername" />

            <TextView
                android:id="@+id/tvBlog"
                android:layout_width="193dp"
                android:layout_height="22dp"
                android:layout_marginTop="5dp"
                android:drawableStart="@drawable/ic_link"
                android:drawablePadding="5dp"
                android:gravity="center_vertical"
                android:text="@string/blog"
                android:textSize="12sp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvEmail" />

            <LinearLayout
                android:id="@+id/linear"
                android:layout_width="215dp"
                android:layout_height="23dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="12dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvBlog">

                <TextView
                    android:id="@+id/tvFollow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/follows"
                    android:textAlignment="center"
                    android:textSize="12sp"
                    tools:ignore="RtlCompat" />

            </LinearLayout>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linear" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/viewpager2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tabs" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/pb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>